# trend-crypto

./: .gitignore  ALPHA_QUICK_REFERENCE.md  CLAUDE.md  Makefile  README.md  TEARSHEET_UNIFICATION_SUMMARY.md  alphas.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: REPOSITORY_OVERVIEW.md  RESEARCH_PIPELINE_REORGANIZATION.md  chart_reference.md  cme_tradable_products_universe.md  commodities_universe.md  equity_index_derivatives_universe.md  futures_convexity_framework_architecture_audit.md  k2_systematic_macro_first_slice.md  medallion_integration.md  project_status_breakdown.md  volbook_changelog.md  volbook_regime_sanity_check.md  volbook_scoring_system_spec.md
notebooks/: signal_research_template.ipynb
registry/: README.md
scripts/: backtest_relative_strength.py  backtest_turtle_crypto.py  batch_alpha_tearsheets.py  build_combined_portfolio_50_50.py  build_equal_risk_portfolio.py  capacity_stress_test.py  chart.py  chart_overlays.py  check_lookahead_lag.py  collect_coinbase.py  compare_runs.py  cron_update_lake.sh  demo_purged_cv.py  diagnose_signal_correlation.py  diagnose_sleeve_correlation.py  diagnose_strategy.py  fetch_binance_usdm_funding.py  freeze_dataset_snapshot.py  gamma_scalp_sim.py  generate_alpha_lab_report.py  generate_alpha_tearsheet.py  generate_cross_asset_summary.py  generate_cto_report.py  generate_factor_portfolio_pdf.py  generate_status_pdf.py  generate_tearsheet_pdf.py  generate_trailing_stops_pdf.py  generate_trend_sweep_pdf.py  generate_universe_study_pdf.py  generate_vol_spike_whitepaper.py  ingest_coinbase_hourly.py  make_crisis_log.py  plot_v12_vs_btc_bh.py  regenerate_all_summaries.py  run_alpha_factory.py  run_backtest.py  run_cost_sensitivity_daily_5_40.py  run_etf_native_report.py  run_gamma_screener.py  run_hrp_ensemble.py  (+11 more)
tests/: conftest.py  test_afml_backtest_stats.py  test_afml_bars.py  test_afml_bet_sizing.py  test_afml_cross_validation.py  test_afml_feature_importance.py  test_afml_features.py  test_afml_fracdiff.py  test_afml_labeling.py  test_afml_microstructure.py  test_afml_portfolio.py  test_afml_sample_weights.py  test_alpha_factory_table_resolution.py  test_alpha_pipeline.py  test_alpha_tearsheet_v0.py  test_benchmark_alignment_tz.py  (+97 more)
(+689 files in other folders)
