[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-crypto-backtest"
version = "0.1.0"
description = "Single-asset Coinbase Advanced hourly backtest pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.6.0",
  "duckdb>=1.1.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

